# vorant

./: Cargo.toml  README.md
machinite_gen/: Cargo.toml  plan.md
machinite_gen/src/: if_points.rs  lib.rs  loop_points.rs  machine_fn.rs  save.rs  yield_points.rs
src/: lib.rs
vorant_gen/: Cargo.toml  plan.md
vorant_gen/src/: if_points.rs  lib.rs  loop_points.rs  machine_fn.rs  save.rs  yield_points.rs
