[package]
name = "vorant"
version = "0.2.0"
edition = "2024"
license = "GNU GPLv3"
description = "A library for generating state machines"
repository = "https://github.com/ocxide/vorant"
keywords = ["machine", "vorant", "state-machine"]

[workspace]
members = ["vorant_gen"]

[dependencies]
vorant_gen = { path = "./vorant_gen" }
