[package]
name = "vorant"
version = "0.2.0"
edition = "2024"
authors=["ocxide"]
license = "LGPL-3.0-only"
description = "A library for generating state machines"
repository = "https://github.com/ocxide/vorant"
keywords = ["machine", "vorant", "state-machine"]

[workspace]
members = ["vorant_gen"]

[dependencies]
vorant_gen = { path = "./vorant_gen", version="=0.2.0" }
