[package]
name = "vorant_gen"
version = "0.2.0"
edition = "2024"
authors=["ocxide"]
license = "LGPL-3.0-only"
description = "A proc-macro library for generating state machines"
repository = "https://github.com/ocxide/vorant"
keywords = ["machine", "vorant", "state-machine", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
